--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     //JNA
     compile 'net.java.dev.jna:jna:4.5.0'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.mockito:mockito-core:2.8"
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.8'
     testCompile 'org.powermock:powermock-module-junit4:1.7.1'
     testCompile 'org.powermock:powermock-api-mockito2:1.7.1'
 }
