--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ branches:
   only:
     - master
     - /^v\d+(\.\d+)+$/
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 deploy:
   provider: releases
   api_key:
